create xml file of person and its age

--- a/countries.html
+++ b/countries.html
@@ -13,6 +13,16 @@
 </select>
 <label>Postal code</label>
 <input type="text" style="color: gray;"  id="countryCode">	
+
+	</div>	
+	<div style="
+    box-sizing: border-box;">
+	
+<label>Country: </label>
+<select id="PersonName">
+	
+</select>
+ 
 	</div>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script type="text/javascript" src="custom.js"></script>
