add selected age from dropdown into input text with xml returned dataType

--- a/countries.html
+++ b/countries.html
@@ -23,6 +23,7 @@
 	
 </select>
  
+<input type="text" style="color: gray;"  id="PersonAge">
 	</div>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script type="text/javascript" src="custom.js"></script>
